<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">raindots</string>
    <string name="action_settings">Settings</string>
    <string name="gravity_string">Gravity</string>
    <string name="antigravity_string">Anti-Gravity</string>
    <string name="density_string">Density</string>
    <string name="evap_string">Evaporate</string>
    <string name="paint_string">Paint</string>
    <string name="seizure_string">Seizure Mode</string>
    <string name="drawable_mode">Toggle Drawable</string>

</resources>
